# Taller_Tausand

./: README.md  Registro taller Tausand.docx
AbacusSoftware-master/: README.md  release_history.md  requirements.txt  setup.cfg  test.py
AbacusSoftware-master/abacusSoftware/: __about__.py  __init__.py  builtin.py  common.py  constants.py  exceptions.py  files.py  fileversion.txt  main.py  menuBar.py  supportWidgets.py  url.py
AbacusSoftware-master/abacusSoftware/GUI/MainWindow/: MainWindow.pro  about.ui  mainwindow.ui
AbacusSoftware-master/abacusSoftware/GUI/images/: Abacus_small.icns  __GUI_images__.py  images.qrc
AbacusSoftware-master/abacusSoftware/source/: code.rst  conf.py  index.rst  install.rst
AbacusSoftware-master/installers/: installer_builder.iss
AbacusSoftware-master/installers/pyinstaller_hooks/: hook-qtmodern.py
taller_1/: AUTHORS.rst  CONTRIBUTING.rst  LICENSE.txt  README.rst  setup.cfg  setup.py
taller_1/docs/: conf.py  index.rst
taller_1/src/: __main__.py
taller_1/src/gui/: visor.py  visor_materias.py
taller_1/tests/: conftest.py
