[metadata]
name = abacusSoftware
version = 1.6.0
author = Juan Barbosa
author_email = js.barbosa10@uniandes.edu.co
maintainer = David Guzman
maintainer_email = da.guzman@outlook.com
description = Abacus Software is a suite of tools built to ensure your experience with Tausand's coincidence counters becomes simplified.
license = GPL
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Tausand-dev/AbacusSoftware
project_urls =
    Bug Tracker = https://github.com/Tausand-dev/AbacusSoftware/issues
classifiers =
    Development Status :: 5 - Production/Stable
    Topic :: Utilities
    License :: OSI Approved :: GNU General Public License (GPL)
    Operating System :: OS Independent
    Programming Language :: Python :: 3

[options]
package_dir =
    = .
packages = find: 
python_requires = >=3.6
install_requires = 
    pyAbacus>=1.2
    pyserial
    numpy
    pyqtgraph
    PyQt5
    qtmodern

[options.packages.find]
where = .

[options.entry_points]
console_scripts =
	abacusSoftware = abacusSoftware.main:run
